tests/integration/snapshots/tests__integration__cfc__ir__actions_debug.snap
---
source: tests/integration/cfc.rs
expression: output_file_content_without_headers
---
target triple = "[filtered]"

%main = type { i32, i32 }

@main_instance = global %main zeroinitializer, !dbg !0
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit___internal___cfc_b2fe9d6d__ctor, ptr null }]

define void @main(ptr %0) !dbg !12 {
entry:
    #dbg_declare(ptr %0, !16, !DIExpression(), !17)
  %a = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %b = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  store i32 0, ptr %a, align [filtered], !dbg !18
  call void @main__newAction(ptr %0), !dbg !17
  call void @main__newAction2(ptr %0), !dbg !19
  ret void, !dbg !20
}

define void @main__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__unit___internal___cfc_b2fe9d6d__ctor() {
entry:
  call void @main__ctor(ptr @main_instance)
  ret void
}

define void @main__newAction(ptr %0) {
entry:
  %a = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %b = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %load_a = load i32, ptr %a, align [filtered]
  %tmpVar = add i32 %load_a, 1
  store i32 %tmpVar, ptr %a, align [filtered]
  ret void
}

define void @main__newAction2(ptr %0) {
entry:
  %a = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %b = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %load_b = load i32, ptr %b, align [filtered]
  %tmpVar = add i32 %load_b, 2
  store i32 %tmpVar, ptr %b, align [filtered]
  ret void
}

!llvm.module.flags = !{!8, !9}
!llvm.dbg.cu = !{!10}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "main", scope: !2, file: !2, line: 1, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>.cfc", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "main", scope: !2, file: !2, line: 1, size: 64, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "main")
!4 = !{!5, !7}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "a", scope: !2, file: !2, line: 1, baseType: !6, size: 32, align [filtered], flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !DIDerivedType(tag: DW_TAG_member, name: "b", scope: !2, file: !2, line: 1, baseType: !6, size: 32, align [filtered], offset: 32, flags: DIFlagPublic)
!8 = !{i32 2, !"Dwarf Version", i32 5}
!9 = !{i32 2, !"Debug Info Version", i32 3}
!10 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !11, splitDebugInlining: false)
!11 = !{!0}
!12 = distinct !DISubprogram(name: "main", linkageName: "main", scope: !2, file: !2, line: 1, type: !13, scopeLine: 1, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !10, retainedNodes: !15)
!13 = !DISubroutineType(flags: DIFlagPublic, types: !14)
!14 = !{null, !3}
!15 = !{}
!16 = !DILocalVariable(name: "main", scope: !12, file: !2, type: !3)
!17 = !DILocation(line: 1, scope: !12)
!18 = !DILocation(line: 3, scope: !12)
!19 = !DILocation(line: 2, scope: !12)
!20 = !DILocation(line: 0, scope: !12)
