tests/integration/snapshots/tests__integration__cfc__ir__conditional_return.snap
---
source: tests/integration/cfc.rs
expression: output_file_content_without_headers
---
target triple = "[filtered]"

%__vtable_conditional_return = type { ptr }
%conditional_return = type { ptr, i32 }

@__vtable_conditional_return_instance = global %__vtable_conditional_return zeroinitializer
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit_conditional_return_cfc_68dc5a26__ctor, ptr null }]

define void @conditional_return(ptr %0) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %__vtable = getelementptr inbounds nuw %conditional_return, ptr %0, i32 0, i32 0
  %val = getelementptr inbounds nuw %conditional_return, ptr %0, i32 0, i32 1
  %load_val = load i32, ptr %val, align [filtered]
  %tmpVar = icmp eq i32 %load_val, 5
  br i1 %tmpVar, label %then_block, label %else_block

then_block:                                       ; preds = %entry
  ret void

else_block:                                       ; preds = %entry
  store i32 10, ptr %val, align [filtered]
  ret void
}

define void @conditional_return__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  %deref = load ptr, ptr %self, align [filtered]
  %__vtable = getelementptr inbounds nuw %conditional_return, ptr %deref, i32 0, i32 0
  call void @__conditional_return___vtable__ctor(ptr %__vtable)
  %deref1 = load ptr, ptr %self, align [filtered]
  %__vtable2 = getelementptr inbounds nuw %conditional_return, ptr %deref1, i32 0, i32 0
  store ptr @__vtable_conditional_return_instance, ptr %__vtable2, align [filtered]
  ret void
}

define void @__vtable_conditional_return__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  %deref = load ptr, ptr %self, align [filtered]
  %__body = getelementptr inbounds nuw %__vtable_conditional_return, ptr %deref, i32 0, i32 0
  call void @____vtable_conditional_return___body__ctor(ptr %__body)
  %deref1 = load ptr, ptr %self, align [filtered]
  %__body2 = getelementptr inbounds nuw %__vtable_conditional_return, ptr %deref1, i32 0, i32 0
  store ptr @conditional_return, ptr %__body2, align [filtered]
  ret void
}

define void @__conditional_return___vtable__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @____vtable_conditional_return___body__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__unit_conditional_return_cfc_68dc5a26__ctor() {
entry:
  call void @__vtable_conditional_return__ctor(ptr @__vtable_conditional_return_instance)
  ret void
}
