tests/integration/snapshots/tests__integration__cfc__ir__conditional_return_debug.snap
---
source: tests/integration/cfc.rs
expression: output_file_content_without_headers
---
target triple = "[filtered]"

@llvm.global_ctors = appending global [1 x { i32, void ()*, i8* }] [{ i32, void ()*, i8* } { i32 65535, void ()* @__init___plc, i8* null }]

define i32 @foo(i32 %0) !dbg !4 {
entry:
  %foo = alloca i32, align 4
  %val = alloca i32, align 4
  call void @llvm.dbg.declare(metadata i32* %val, metadata !9, metadata !DIExpression()), !dbg !10
  store i32 %0, i32* %val, align 4
  call void @llvm.dbg.declare(metadata i32* %foo, metadata !11, metadata !DIExpression()), !dbg !12
  store i32 0, i32* %foo, align 4
  %load_val = load i32, i32* %val, align 4, !dbg !13
  %tmpVar = icmp eq i32 %load_val, 5, !dbg !13
  br i1 %tmpVar, label %then_block, label %else_block, !dbg !13

then_block:                                       ; preds = %entry
  %foo_ret = load i32, i32* %foo, align 4, !dbg !14
  ret i32 %foo_ret, !dbg !14

else_block:                                       ; preds = %entry
  store i32 10, i32* %val, align 4, !dbg !15
  %foo_ret1 = load i32, i32* %foo, align 4, !dbg !16
  ret i32 %foo_ret1, !dbg !16
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

define void @__init___plc() {
entry:
  ret void
}

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>.cfc", directory: "")
!4 = distinct !DISubprogram(name: "foo", linkageName: "foo", scope: !3, file: !3, line: 1, type: !5, scopeLine: 4, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !8)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null, !7}
!7 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!8 = !{}
!9 = !DILocalVariable(name: "val", scope: !4, file: !3, line: 1, type: !7)
!10 = !DILocation(line: 1, column: 30, scope: !4)
!11 = !DILocalVariable(name: "foo", scope: !4, file: !3, line: 1, type: !7, align: 32)
!12 = !DILocation(line: 1, column: 9, scope: !4)
!13 = !DILocation(line: 2, scope: !4)
!14 = !DILocation(line: 3, scope: !4)
!15 = !DILocation(line: 5, scope: !4)
!16 = !DILocation(line: 0, scope: !4)
