tests/integration/snapshots/tests__integration__cfc__ir__jump_to_label_with_false.snap
---
source: tests/integration/cfc.rs
expression: output_file_content_without_headers
---
target triple = "[filtered]"

@llvm.used = appending global [2 x i8*] [i8* bitcast (void ()* @__init___plc to i8*), i8* bitcast (void ()** @__init_array_entry___init___plc to i8*)]
@__init_array_entry___init___plc = internal unnamed_addr global void ()* @__init___plc, section ".init_array"

define i32 @main() {
entry:
  %main = alloca i32, align 4
  %x = alloca i8, align 1
  %a = alloca i32, align 4
  store i8 0, i8* %x, align 1
  store i32 0, i32* %a, align 4
  store i32 0, i32* %main, align 4
  store i8 0, i8* %x, align 1
  %load_x = load i8, i8* %x, align 1
  br i8 %load_x, label %lbl, label %else_block

else_block:                                       ; preds = %entry
  store i32 2, i32* %a, align 4
  br label %lbl

lbl:                                              ; preds = %else_block, %entry
  %load_a = load i32, i32* %a, align 4
  %tmpVar = add i32 %load_a, 3
  store i32 %tmpVar, i32* %a, align 4
  %load_a1 = load i32, i32* %a, align 4
  store i32 %load_a1, i32* %main, align 4
  %main_ret = load i32, i32* %main, align 4
  ret i32 %main_ret
}

define void @__init___plc() {
entry:
  ret void
}
