tests/integration/snapshots/tests__integration__cfc__ir__sink_source_debug.snap
---
source: tests/integration/cfc.rs
expression: output_file_content_without_headers
---
target triple = "[filtered]"

%main = type { i32 }

@main_instance = global %main zeroinitializer, !dbg !0
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit___internal___cfc_b2fe9d6d__ctor, ptr null }]

define void @main(ptr %0) !dbg !11 {
entry:
    #dbg_declare(ptr %0, !15, !DIExpression(), !16)
  %x = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  store i32 5, ptr %x, align [filtered], !dbg !17
  ret void, !dbg !18
}

define void @main__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered], !dbg !18
  store ptr %0, ptr %self, align [filtered], !dbg !18
  ret void, !dbg !18
}

define void @__unit___internal___cfc_b2fe9d6d__ctor() {
entry:
  call void @main__ctor(ptr @main_instance), !dbg !18
  ret void, !dbg !18
}

!llvm.module.flags = !{!7, !8}
!llvm.dbg.cu = !{!9}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "main", scope: !2, file: !2, line: 1, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>.cfc", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "main", scope: !2, file: !2, line: 1, size: 32, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "main")
!4 = !{!5}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "x", scope: !2, file: !2, line: 1, baseType: !6, size: 32, align [filtered], flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{i32 2, !"Dwarf Version", i32 5}
!8 = !{i32 2, !"Debug Info Version", i32 3}
!9 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !10, splitDebugInlining: false)
!10 = !{!0}
!11 = distinct !DISubprogram(name: "main", linkageName: "main", scope: !2, file: !2, line: 1, type: !12, scopeLine: 1, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !9, retainedNodes: !14)
!12 = !DISubroutineType(flags: DIFlagPublic, types: !13)
!13 = !{null, !3}
!14 = !{}
!15 = !DILocalVariable(name: "main", scope: !11, file: !2, type: !3)
!16 = !DILocation(line: 1, scope: !11)
!17 = !DILocation(line: 4, scope: !11)
!18 = !DILocation(line: 0, scope: !11)
